--- a/examples/movies/package.json
+++ b/examples/movies/package.json
@@ -37,6 +37,7 @@
     ]
   },
   "devDependencies": {
-    "@types/react-dom": "^16.9.9"
+    "@types/react-dom": "^16.9.9",
+    "typescript": "^4.0.5"
   }
 }
