--- a/examples/movies/package.json
+++ b/examples/movies/package.json
@@ -9,6 +9,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-rest-request": "file:../../",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "web-vitals": "^0.2.4"
   },
@@ -38,6 +39,7 @@
   },
   "devDependencies": {
     "@types/react-dom": "^16.9.9",
+    "@types/react-router-dom": "^5.1.6",
     "typescript": "^4.0.5"
   }
 }
