fix: filter undefined variable values
chore(tests): add tests for misc methods

Closes #14

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,9 +14,10 @@
         "strict": true,
         "strictNullChecks": true,
         "allowSyntheticDefaultImports": true,
-        "declaration": true,
+        "declaration": true
     },
     "include": [
-        "src"
-    ],
+        "src",
+        "tests"
+    ]
 }
