--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "target"
   ],
   "scripts": {
-    "prepublishOnly": "tsc"
+    "test": "jest",
+    "prepublishOnly": "tsc",
+    "report-coverage": "cat coverage/lcov.info | coveralls"
   },
   "repository": {
     "type": "git",
@@ -34,6 +36,7 @@
     "tiny-invariant": "^1.1.0"
   },
   "devDependencies": {
+    "@types/jest": "^26.0.15",
     "@types/lodash.isequal": "^4.5.5",
     "@types/react": "^16.9.55",
     "@typescript-eslint/eslint-plugin": "^4.6.1",
@@ -41,6 +44,8 @@
     "eslint": "^7.12.1",
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "jest": "^26.6.3",
+    "ts-jest": "^26.4.3",
     "typescript": "^4.0.5"
   }
 }
