--- a/examples/movies/package.json
+++ b/examples/movies/package.json
@@ -8,7 +8,7 @@
     "@testing-library/user-event": "^12.2.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-rest-request": "file:../../",
+    "react-rest-request": "github:pleshevskiy/react-rest-request",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "web-vitals": "^0.2.4"
@@ -40,6 +40,6 @@
   "devDependencies": {
     "@types/react-dom": "^16.9.9",
     "@types/react-router-dom": "^5.1.6",
-    "typescript": "^4.0.5"
+    "typescript": "4.0.5"
   }
 }
