--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   ],
   "scripts": {
     "test": "jest",
+    "build": "rm -rf target && tsc",
     "prepublishOnly": "rm -rf target && tsc",
     "report-coverage": "cat coverage/lcov.info | coveralls"
   },
@@ -40,6 +41,7 @@
   "devDependencies": {
     "@types/jest": "^26.0.15",
     "@types/lodash.isequal": "^4.5.5",
+    "@types/node-fetch": "^2.5.7",
     "@types/react": "^16.9.55",
     "@typescript-eslint/eslint-plugin": "^4.6.1",
     "@typescript-eslint/parser": "^4.6.1",
@@ -47,6 +49,7 @@
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^4.2.0",
     "jest": "^26.6.3",
+    "node-fetch": "^2.6.1",
     "ts-jest": "^26.4.3",
     "typescript": "^4.0.5"
   }
