--- a/package.json
+++ b/package.json
@@ -35,7 +35,6 @@
   "homepage": "https://github.com/pleshevskiy/react-rest-request#readme",
   "dependencies": {
     "lodash.isequal": "^4.5.0",
-    "react": "^17.0.1",
     "tiny-invariant": "^1.1.0"
   },
   "devDependencies": {
@@ -52,5 +51,8 @@
     "node-fetch": "^2.6.1",
     "ts-jest": "^26.4.3",
     "typescript": "^4.0.5"
+  },
+  "peerDependencies": {
+    "react": "^16.3.0 || ^17.0.0"
   }
 }
