--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   ],
   "scripts": {
     "test": "jest",
-    "build": "rm -rf target && tsc",
+    "build": "tsc",
     "prepublishOnly": "rm -rf target && tsc",
     "report-coverage": "cat coverage/lcov.info | coveralls"
   },
