--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-rest-request",
-  "version": "0.5.5",
-  "description": "Minimalistic REST API client for React inspired by Apollo",
+  "version": "0.5.6",
+  "description": "Minimalist REST API client for React inspired by Apollo",
   "readme": "README.md",
   "main": "./target/index.js",
   "types": "./target/index.d.ts",
